--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -236,10 +236,19 @@
     <Compile Include="Migrations\201811230746214_Add Birthdate for Customer 1.Designer.cs">
       <DependentUpon>201811230746214_Add Birthdate for Customer 1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811240422266_Fields Added To Movie.cs" />
+    <Compile Include="Migrations\201811240422266_Fields Added To Movie.Designer.cs">
+      <DependentUpon>201811240422266_Fields Added To Movie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201811240423336_Genres.cs" />
+    <Compile Include="Migrations\201811240423336_Genres.Designer.cs">
+      <DependentUpon>201811240423336_Genres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -291,6 +300,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -335,6 +345,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811230746214_Add Birthdate for Customer 1.resx">
       <DependentUpon>201811230746214_Add Birthdate for Customer 1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811240422266_Fields Added To Movie.resx">
+      <DependentUpon>201811240422266_Fields Added To Movie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811240423336_Genres.resx">
+      <DependentUpon>201811240423336_Genres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
